--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic' rel='stylesheet'
         type='text/css'>
-    <link href='/assets/css/styles.css' rel='stylesheet' type='text/css'>
+    <link href='https://github.com/Almdar7/CV/tree/main/assets/css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
