Se hizieron cambios de estetica e informacion!

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,400,400italic' rel='stylesheet'
         type='text/css'>
+    <link href='/assets/css/styles.css' rel='stylesheet' type='text/css'>
     <link href='https://almdar7.github.io/CV/assets/css/styles.css' rel='stylesheet' type='text/css'>
 </head>
 
@@ -20,12 +21,12 @@
                 <h2 class="logotype_occupation">BackEnd Web Developer</h2>
             </div>
             <!-- MAIN MENU -->
-            <!-- <div class="header_menu_container">
+            <div class="header_menu_container">
                 <ul class="download_print_buttons horizontal_list">
                     <li><a href="#"><span class="icon entypo-download"></span>Download CV</a></li>
-                    <li><a href="#"><span class="icon entypo-print"></span>Print CV</a></li>
+                    <!-- <li><a href="#"><span class="icon entypo-print"></span>Print CV</a></li> -->
                 </ul>
-                <div class="clear"></div>
+                <!-- <div class="clear"></div>
                 <ul class="header_menu horizontal_list">
                     <li><a class="no_border purple" href="#">Profile</a></li>
                     <li><a href="#">Education</a></li>
@@ -33,8 +34,8 @@
                     <li><a href="#">Work Experience</a></li>
                     <li><a href="#">Featured Projects</a></li>
                     <li><a href="#">Awards</a></li>
-                </ul>
-            </div> -->
+                </ul> -->
+            </div>
         </div>
         <!-- LEFT COL -->
         <div id="left_col">
@@ -44,8 +45,7 @@
             </div>
             <div class="hello_content">
                 <h2>Hola!</h2>
-                <p>Soy un apasionado de la tecnología, trabajador y de rápido aprendizaje con experiencia en .NET/SQL
-                    Server.</p>
+                <p>Soy un apasionado de la tecnología, trabajador y de rápido aprendizaje.</p>
             </div>
             <div class="contact_details_content">
                 <h2>Contacto</h2>
@@ -68,8 +68,8 @@
                 <ul class="social_icons horizontal_list">
                     <li><a class="facebook" href="https://www.facebook.com/profile.php?id=100009457063321" target="_blank"><span
                                 class="entypo-facebook-circled"></span><span class="invisible">Facebook</span></a></li>
-                    <li><a class="twitter" href="https://twitter.com/jlalovi" target="_blank"><span
-                                class="entypo-twitter-circled"></span><span class="invisible">Twitter</span></a></li>
+                    <li><a class="github" href="https://github.com/Almdar7" target="_blank"><span
+                                class="entypo-github-circled"></span><span class="invisible">Twitter</span></a></li>
                     <li><a class="linkedin" href="https://www.linkedin.com/in/dario-martin-moresi-rivalta-5b3690273/" target="_blank"><span
                                 class="entypo-linkedin-circled"></span><span class="invisible">LinkedIn</span></a></li>
                 </ul>
@@ -89,24 +89,13 @@
             </div>
             <div class="block">
                 <h2>Sobre mi ...</h2>
-                <p>Soy una persona y entusiasta desarrollador junior con un enfoque apasionado en el desarrollo de
-                    back-end utilizando .NET Core. Aunque estoy en las primeras etapas de mi carrera profesional, estoy
-                    ansioso por aprender y crecer en el campo de la programación.</p>
-                <p>Durante mi formación académica, adquirí conocimientos fundamentales en lenguajes de programación como
-                    C# y conceptos de desarrollo orientado a objetos. También he trabajado en proyectos prácticos
-                    utilizando .NET Core, donde he desarrollado habilidades en el diseño e implementación de soluciones
-                    de software básicas.</p>
-                <p>Mi objetivo principal es ampliar mi experiencia laboral en el desarrollo de aplicaciones web y
-                    servicios RESTful utilizando .NET Core. Estoy abierto a aprender nuevas tecnologías y mejorar mis
-                    habilidades técnicas para convertirme en un desarrollador de back-end más sólido.</p>
-                <p>Soy un buen colaborador y me siento cómodo trabajando en equipo. Disfruto trabajando junto a otros
-                    desarrolladores y aprendiendo de su experiencia. Además, tengo habilidades de comunicación efectivas
-                    que me permiten entender los requisitos y desafíos técnicos y contribuir de manera significativa en
-                    el desarrollo de proyectos.</p>
-                <p>Aunque soy un junior estoy dispuesto a asumir desafíos y aprender de mis errores. Mi objetivo
-                    principal es crecer y adquirir conocimientos prácticos en el desarrollo de back-end utilizando .NET
-                    Core, y estoy emocionado por tener la oportunidad de trabajar en proyectos reales y demostrar mi
-                    valía como miembro de un equipo de desarrollo.</p>
+                <p>Soy un apasionado desarrollador con un enfoque en el desarrollo de back-end utilizando .NET Core. 
+                    Aunque estoy en las primeras etapas de mi carrera, estoy ansioso por aprender y crecer en la programación. 
+                    Mi formación académica me ha proporcionado conocimientos en lenguajes como C# y conceptos de desarrollo orientado a objetos. 
+                    He trabajado en proyectos prácticos con .NET Core, lo que me ha permitido desarrollar habilidades en diseño e implementación de soluciones de software. 
+                    Mi objetivo principal es expandir mi experiencia en aplicaciones web y servicios RESTful usando .NET Core, manteniéndome abierto a nuevas tecnologías y mejorando mis habilidades técnicas. 
+                    Soy un buen colaborador, cómodo en equipos, con habilidades de comunicación efectivas para entender requisitos y desafíos técnicos, y estoy dispuesto a asumir desafíos y aprender de mis errores mientras crezco en el desarrollo de back-end. 
+                    Estoy emocionado por demostrar mi valía en proyectos reales y ser parte de un equipo de desarrollo</p>
             </div>
             <!-- <div class="horizontal_line">
                 <div class="line_left"></div>
@@ -145,7 +134,7 @@
                 <!-- <p>I'm passionate about technology and human behavior, both determine almost all my interests and
                     hobbies:</p> -->
                 <ul>
-                    <li>Desarrollador de sofware en GoodApps</li>
+                    <li>Desarrollador de software en GoodApps</li>
                 </ul>
             </div>
             <div class="horizontal_line">
